// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders fullWidth button correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#01C38D",
      "borderRadius": 25,
      "justifyContent": "center",
      "marginBottom": 18,
      "opacity": 1,
      "padding": 18,
      "width": 724,
    }
  }
>
  <Text
    style={
      {
        "backgroundColor": "transparent",
        "color": "#FFFFFF",
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    Test
  </Text>
</View>
`;

exports[`Button Component renders standard button correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#01C38D",
      "borderRadius": 25,
      "justifyContent": "center",
      "marginBottom": 18,
      "opacity": 1,
      "padding": 18,
      "width": 250,
    }
  }
>
  <Text
    style={
      {
        "backgroundColor": "transparent",
        "color": "#FFFFFF",
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    Test
  </Text>
</View>
`;
